Finally few styling fixes before I deploy. Spacing beneath headings needed tightening

--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -25,7 +25,7 @@ body {
 		font-weight: 600;
 		padding: 20px;
 		color: $heading;
-		margin-bottom:45px;
+		margin-bottom:10px;
 		@media screen and (min-width: 600px) { 
 			font-size: 2.5em; 
 		}
