--- a/app/assets/stylesheets/references.css.scss
+++ b/app/assets/stylesheets/references.css.scss
@@ -12,7 +12,7 @@
 		font-weight: 600;
 		padding: 20px;
 		color: $heading;
-		margin-bottom:45px;
+		margin-bottom:10px;
 		@media screen and (min-width: 600px) { 
 			font-size: 2.5em; 
 		}
